--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<!-- App -->
 	<script type="text/javascript" src="codebase/myapp.js"></script>
 	<link rel="stylesheet" type="text/css" href="codebase/myapp.css">
+	<link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.7.94/css/materialdesignicons.css" type="text/css" charset="utf-8">
 </head>
 <body></body>
 </html>
